<resources>
    <string name="app_name">Swapping Books</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="author">Author</string>
    <string name="publiCompany">Publishing Company</string>
    <string name="edition">Edition</string>
    <string name="categoy">Category</string>
    <string name="description">Description</string>
    <string name="infoRegister">Nice! Another book for the universe of exchange and giving. So come on, enter the ISBN
        number of your book, that number is usually next to the barcode printed on the back of your book.
    </string>
    <string name="infoTitleRegister">Registering a Book</string>
    <string name="isbn">ISBN</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
