<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                       android:layout_height="wrap_content" app:cardElevation="8dp"
                                       app:cardCornerRadius="8dp"
                                       android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="68dp"
                android:layout_height="79dp" app:srcCompat="@drawable/notebook"
                android:id="@+id/imgBook"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp" android:layout_marginStart="15dp" android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
        />
        <TextView
                android:text="@string/title"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/txTitle" app:layout_constraintStart_toEndOf="@+id/imgBook"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imgBook"
                app:layout_constraintBottom_toBottomOf="@+id/imgBook" app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txSubtitle" app:layout_constraintStart_toEndOf="@+id/txTitle"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/txTitle" app:layout_constraintBottom_toBottomOf="@+id/txTitle"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/author"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/txAuthor"
                app:layout_constraintBottom_toBottomOf="@+id/imgBook"
                app:layout_constraintTop_toBottomOf="@+id/txTitle" app:layout_constraintStart_toStartOf="@+id/txTitle"
                app:layout_constraintEnd_toEndOf="@+id/txTitle" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.268"/>
        <TextView
                android:text="@string/publiCompany"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/txPubliCompany"
                app:layout_constraintStart_toEndOf="@+id/txAuthor" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/txAuthor"
                app:layout_constraintBottom_toBottomOf="@+id/txAuthor" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/edition"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/txEdition" app:layout_constraintStart_toEndOf="@+id/imgBook"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txAuthor"
                app:layout_constraintBottom_toBottomOf="@+id/imgBook" app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:text="@string/categoy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txCategory" app:layout_constraintStart_toEndOf="@+id/txEdition"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/txEdition"
                app:layout_constraintBottom_toBottomOf="@+id/txEdition" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/description"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:id="@+id/txDescription"
                app:layout_constraintStart_toStartOf="@+id/imgBook"
                app:layout_constraintEnd_toEndOf="@+id/txPubliCompany"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="#9E1F1D1D" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/txEdition" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView >