<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content" app:cardElevation="8dp"
                                   app:cardCornerRadius="8dp"
                                   android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
                android:layout_width="138dp"
                android:layout_height="118dp" app:srcCompat="@drawable/notebook"
                android:id="@+id/imageView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintStart_toEndOf="@+id/imageView"
                android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" tools:text="@string/title"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText3" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toEndOf="@+id/imageView"
                android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                tools:text="@string/subtitle"/>
        <EditText
                android:layout_width="175dp"
                android:layout_height="45dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" tools:text="@string/author"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/edition"
                android:ems="10"
                android:id="@+id/editText5"
                app:layout_constraintEnd_toEndOf="@+id/editText3"
                app:layout_constraintStart_toEndOf="@+id/editText4" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/editText4"
                app:layout_constraintBottom_toBottomOf="@+id/editText4"/>
        <EditText
                android:layout_width="175dp"
                android:layout_height="41dp"
                android:inputType="textPersonName"
                android:text="@string/categoy"
                android:ems="10"
                android:id="@+id/editText6" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText4" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText7"
                app:layout_constraintEnd_toEndOf="@+id/editText5"
                app:layout_constraintStart_toEndOf="@+id/editText6"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/editText6"
                app:layout_constraintBottom_toBottomOf="@+id/editText6" tools:text="@string/publiCompany"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/editText8" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/editText6"
                app:layout_constraintEnd_toEndOf="@+id/editText7"
                app:layout_constraintStart_toStartOf="@+id/editText6"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView >