<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/infoTitleRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/infoRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="10dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" tools:text="@string/isbn" android:textColor="#92332828"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/button3"
                android:layout_marginRight="8dp"/>
        <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button3"
                app:layout_constraintTop_toTopOf="@+id/editText" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>